--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,3 +11,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World :)"
+      - name: Now it is
+        run: |
+          date [-d]
+      - name: Directory content
+        run: |
+          ls -l
