--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,7 +13,7 @@ jobs:
           echo "Hello World :)"
       - name: Now it is
         run: |
-          date [-d]
+          date
       - name: Directory content
         run: |
           ls -l
